emc2 (1:2.3.3~pre) hardy; urgency=low

  * Stepconf: fix error "global name 'machinename' is not defined"
  * comp: fix building userspace components
  * interpreter: Reject bad values of I, J, K in G76 (SF#2817324)
  * interpreter: show error instead of silently continuing for certain
    rejected forms of G76
  * documentation improvements

 -- Jeff Epler <jepler@unpythonic.net>  Tue, 14 Jul 2009 21:35:59 -0500

emc2 (1:2.3.2) hardy; urgency=low

  * pyvcp: New "-g" flag to specify window size and position
  * classicladder:Fix crash from clicking on comparison objects
  * halshow: fix overlap of pin name and value with long values
  * calibration now works with hostmot2-style hal files
  * documentation improvements
  * documentation: fix User Manual menu item
  * configure: fix obscure error 'source: not found'
  * configure: check that tk and Tkinter
  * configure: fix truncated output on some systems
  * After an abort, DTG and velocity will now show as 0
  * axis: improve max velocity slider default maximum for machines with rotary
    axes
  * axis: when showing machine position, do not include TLO
  * axis: in touch-off, show mm/in/degree, radius/diameter
  * update CoolTool config files
  * stepconf: Fix second and third parport direction settings (in/out)
    not following the user request.
  * stepconf: Fix creating shortcuts on systems where the Desktop directory
    is not called "Desktop"
  * pickconfig: Fix creating shortcuts on systems where the Desktop directory
    is not called "Desktop"
  * Increase the HAL shared memory area.  This fixes problems loading complex
    configurations, such as those that use two mesa cards
  * in AXIS, machine position no longer incorrectly shows the tool offset
  * in AXIS, use [TRAJ]MAX_LINEAR_VELOCITY for the top end of the max velocity
    slider, instead of [TRAJ]MAX_VELOCITY which is inappropriate for machines
    with some linear and some rotary axes.